[package]
name = "majlisna-bot"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Bedair <ahmaddev992@gmail.com>"]
description = "Majlisna Bot - Arabic smart discussion bot powered by AI and Discord voice integration"
license = "MIT"
repository = "https://github.com/ahmaddev992/fluffy-enigma"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serenity = { version = "0.11", features = ["framework", "standard_framework", "client", "gateway", "voice"], optional = true }
songbird = { version = "0.4", optional = true }
async-openai = { version = "0.19", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["discord", "voice", "ai"]
discord = ["serenity"]
voice = ["songbird"]
ai = ["async-openai"]
